modificado nome da associaçao

--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@ header("Content-Type: text/html; charset=UTF-8",true);
 
 ?>
 
-
-
 <!doctype html>
 <html lang="pt-br">
   <head>
@@ -32,7 +30,7 @@ header("Content-Type: text/html; charset=UTF-8",true);
 				<a class="nav-link" href="informes.html">INFORMAÇÕES</a>
 				<a class="nav-link" href="galeria.html">GALERIA</a>
 			</nav>
-			<h5 class="text-white h4">ASSOCIAÇÃO NORTE RIOGRANDENSE DOS AGENTES PATRIMONIAIS E VIGIAS </h5>
+			<h5 class="text-white h4">ASSOCIAÇÃO NORTE RIOGRANDENSE DOS GUARDAS PATRIMONIAIS E VIGIAS </h5>
 			<span class="text-muted">É TEMPO DE TRABALHO.</span>
 		</div>
 		</div>
